Fix alignment
Accidentally added this line back in a previous commit

--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ h1, p, a {
 
 .vertical_center {
 	position: relative;
-	top: 50%;
 	transform: translateY(-50%);
 }
 
